k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fullstack-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: fullstack.local
      http:
        paths:
          - path: /api/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: laravel-backend
                port:
                  number: 8000

          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: react-frontend
                port:
                  number: 80
